# da5402-final-project

./: .dockerignore  .env.example  .gitignore  MLproject  Makefile  README.md  conda.yaml  constraints.txt  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
configs/: data_config.json
demo/: 00_runbook.md  01_architecture_walkthrough.md  02_happy_path_demo.md
docs/: architecture.md  data_card.md  demo_script.md  docker_deployment.md  dvc_experiments.md  final_report.tex  hld.md  lld.md  mlops_report.md  monitoring.md  submission_checklist.md  test_plan.md  test_report.md  user_manual.md  viva_notes.md
ml/: __init__.py  common.py  project.py
models/: .gitignore
reports/: .gitignore  acceptance_gate.json  batch_pipeline_report.json  confusion_matrix.csv  data_validation.json  drift_report.json  eda_report.json  eda_report.md  evaluation.json  feature_baseline_report.json  feedback_merge_report.json  feedback_preparation_report.json  final_metrics.json  ingestion_report.json  maintenance_report.json  model_comparison.json  model_comparison.md  model_comparison_plot.csv  model_optimization_report.json  pipeline_performance.json  pipeline_report.json  preprocessing_report.json  training_metrics.json
scripts/: bootstrap_airflow.sh  docker_smoke.sh  dvc_repro_check.sh  monitoring_status.sh  rollback_model.sh  trigger_monitoring_alerts.sh  validate_monitoring_config.sh
tests/: test_acceptance_gate.py  test_airflow_dags.py  test_api.py  test_batch_ops.py  test_data_validation.py  test_eda.py  test_ingestion.py  test_maintenance_policy.py  (+4 more)
(+67 files in other folders)
